src/main/java/org/example/pmanchu_be/global/error/exception/GlobalException.java
package org.example.pmanchu_be.global.error.exception;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class GlobalException extends RuntimeException {
    private final ErrorCode errorCode;
}
